# VaR-Lib

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
examples/: README.md  _common.py  full_backtest.py  single_instrument.py
examples/charts/: breaches.py  distribution.py  paths.py  timeline.py  traffic_light.py
examples/data/: AAPL.csv
tests/: test_aw_historical.py  test_backtest_report.py  test_dynamic_quantile.py  test_ewma.py  test_fhs.py  test_historical.py  test_historical_bootstrap.py  test_horizon.py  test_parametric_brownian.py  test_report.py  test_roll_backtest.py  test_rolling.py
tests/backtest/: test_christoffersen.py  test_kupiec.py  test_traffic_light.py
tests/plotting/: conftest.py  test_breach_timeline.py  test_breaches.py  test_dashboard.py  test_distribution_chart.py  test_dq_chart.py  test_traffic_light_chart.py
tests/test_parametric_jump/: test_estimate_jump_parameters.py  test_parametric_jump_var.py
tests/test_parametric_ou/: test_estimate_ou_parameters.py  test_parametric_ou_var.py
varlib/: __init__.py  _returns.py  base.py  report.py
varlib/backtest/: __init__.py  _chi_square.py  christoffersen.py  dynamic_quantile.py  kupiec.py  rolling.py  traffic_light.py
varlib/models/: __init__.py  ewma.py  historical_bootstrap.py  parametric_brownian.py  parametric_jump.py  parametric_ou.py
varlib/models/ewma/: __init__.py  ewma.py
varlib/models/non_parametric/: README.MD  __init__.py  aw_historical_simulation.py  historical_bootstrap.py
varlib/models/non_parametric/bootstrap/: __init__.py  bootstrap.py
varlib/models/non_parametric/historical/: __init__.py  historical.py
varlib/models/parametric/: __init__.py  brownian.py  ewma.py  ou.py
varlib/models/parametric/brownian/: __init__.py  brownian.py
varlib/models/parametric/ewma/: __init__.py  ewma.py
varlib/models/parametric/jump/: __init__.py  jump.py
varlib/models/parametric/ou/: __init__.py  ou.py
varlib/models/semi_parametric/: README.md  __init__.py  filtered_historical_simulation.py
varlib/plotting/: __init__.py  _style.py  backtest_panel.py  breach_timeline.py  breaches.py  dashboard.py  distribution_chart.py  dq_chart.py  paths_chart.py  report.py  traffic_light_chart.py
