[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "varlib"
version = "0.1.0"
description = "A readable, validated, dependency-light Value at Risk library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Matas Urbonavicius" }]
keywords = ["value-at-risk", "var", "risk", "backtesting", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20", "pandas>=1.2"]

# When the GitHub repo exists, add its links here so PyPI points back to it:
# [project.urls]
# Homepage = "https://github.com/<you>/varlib"
# Repository = "https://github.com/<you>/varlib"
# Issues = "https://github.com/<you>/varlib/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]
plot = ["matplotlib>=3.4"]

[tool.setuptools.packages.find]
include = ["varlib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
