[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "varlib"
version = "0.1.0"
description = "A readable, validated Value at Risk library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Matas Urbonavicius" }]
keywords = ["value-at-risk", "var", "risk", "backtesting", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20", "pandas>=1.2", "scipy>=1.7", "matplotlib>=3.4", "pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/matasurbonavicius/VaR-Lib"
Repository = "https://github.com/matasurbonavicius/VaR-Lib"
Issues = "https://github.com/matasurbonavicius/VaR-Lib/issues"

[tool.setuptools.packages.find]
include = ["varlib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
